<resources>
    <string name="app_name">ChessApp1</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Software Engineering Course CS4500 Chess Game!</string>
    <string name="play_message">Click to Play!</string>
    <string name="chess_rules">ChessRules</string>
    <string name="Rules">Rules</string>
    <string name="Credits">Credits</string>
    <string name="check_rule"> - Check: Is when on players king can be taken by any piece of the opponent.</string>
    <string name="checkmate_rule"> - CheckMate: If a player is in the Check position and cannot make anymore moves, then the player automatically loses the game</string>
    <string name="stalemate_rule"> - Stalemate: If a player cannot make any more moves, but not in a check position, the game is stalemated and a automatic tie</string>
    <string name="piece_rule"> - If a Player touches one of the pieces, a move must be made.</string>
    <string name="resource_rule"> * Resource: ChessVariants website</string>
    <string name="castling_rule"> - Castling; If king or rook has not moved, the kind is not in check, the king won’t move over or to a square that was attacked by the enemy, all the square between the rook and the king are empty and the king and rook occupy the same row, then the castling move can be implemented. With castling, the king has to move two squares towards the rook then the rook has to move to the king new square</string>
    <string name="credits_intro">Credits:</string>
    <string name="brian_credit">  Brian Lewandowski</string>
    <string name="kyle_credit">Kyle Ashley</string>
    <string name="dejuan_credits">Dejuan Daniels</string>
    <string name="ian_credit">Ian Springer</string>
    <string name="turner_credit">Turner England</string>
    <string name="molly_credit">Molly Bolt</string>
    <string name="jean_credit">Jean Monte Carvalho</string>
    <string name="creators_credits">Creators:</string>
    <string name="verison_credit">Version: 1.000</string>
    <string name="cs4600_credit">Indiana Tech Software Engineering Class CS4600</string>
    <string name="taking_rule">- Taking En-Passant: When a pawn makes a double step from the second row to the fourth row, and there is an enemy pawn on an adjacent square on the fourth row, then this enemy pawn inthe next move may move diagonally to the square that was passed over by the double-stepping pawn, which is on the third row. In this same move, the double-stepping pawn is taken. This taking en-passant must be done directly: if the player who could take en-passant does not do this in the first move after the double step, this pawn cannot be taken anymore by an en-passant move.</string>
    <string name="title_content">Chess Game!</string>
</resources>
