<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity= "center|top"
    android:orientation="vertical">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/castling_rule"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/check_rule"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/checkmate_rule"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/stalemate_rule"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity= "end"
        android:text="@string/taking_rule"
        android:textSize= "15sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/piece_rule"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_gravity="start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/resource_rule"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_gravity="bottom" />


</LinearLayout>