<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding= "20dp"
    android:gravity= "center|top"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:gravity="center"
        android:text="@string/title_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle= "bold"
        android:textSize="25sp"/>

    <Button
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:text= "@string/play_message"
        android:id="@+id/button0"
        android:layout_weight="0.0"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rules"
        android:id="@+id/button1"
        android:layout_weight="0.0"
        android:onClick="rules_go"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Credits"
        android:id="@+id/button2"
        android:onClick="credits_go"/>

</TableLayout>


